Design refresh v2: sovereign tech theme + stronger copy

--- a/public/index.html
+++ b/public/index.html
@@ -7,87 +7,227 @@
   <meta name="description" content="An AI receptionist that answers inbound calls, captures lead details, and sends actionable summaries." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
   <style>
-    :root{--bg:#0b1220;--panel:#0f1a33;--text:#eaf0ff;--muted:#b8c4e6;--accent:#ff7a3d;--line:rgba(255,255,255,.12)}
-    *{box-sizing:border-box} body{margin:0;font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial; background:linear-gradient(180deg,var(--bg),#070b15); color:var(--text)}
-    a{color:inherit} .wrap{max-width:1060px;margin:0 auto;padding:32px 20px}
+    :root{
+      --bg0:#070A14;
+      --bg1:#0B1220;
+      --panel:rgba(255,255,255,.06);
+      --panel2:rgba(255,255,255,.04);
+      --text:#EAF0FF;
+      --muted:#B8C4E6;
+      --line:rgba(255,255,255,.12);
+      --accent:#FF7A3D;      /* ember */
+      --accent2:#3DE7FF;     /* cyan */
+      --ok:#3CFFA0;
+      --shadow: 0 18px 60px rgba(0,0,0,.45);
+    }
+
+    *{box-sizing:border-box}
+    html,body{height:100%}
+    body{
+      margin:0;
+      font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial;
+      color:var(--text);
+      background:
+        radial-gradient(1100px 600px at 20% 0%, rgba(61,231,255,.18), transparent 55%),
+        radial-gradient(900px 520px at 85% 10%, rgba(255,122,61,.18), transparent 55%),
+        radial-gradient(900px 700px at 50% 120%, rgba(140,120,255,.10), transparent 55%),
+        linear-gradient(180deg, var(--bg1), var(--bg0));
+    }
+    a{color:inherit}
+
+    .wrap{max-width:1120px;margin:0 auto;padding:26px 20px 34px}
+
     .nav{display:flex;align-items:center;justify-content:space-between;gap:16px}
-    .brand{display:flex;align-items:center;gap:10px;font-weight:700;letter-spacing:.2px}
-    .pill{display:inline-flex;gap:10px;align-items:center}
-    .pill a{opacity:.9;text-decoration:none;font-weight:600}
-    .pill a:hover{opacity:1}
-    .btn{background:var(--accent);color:#111;border:none;border-radius:12px;padding:12px 16px;font-weight:700;text-decoration:none;display:inline-block}
-    .btn.secondary{background:transparent;color:var(--text);border:1px solid var(--line)}
-    .hero{padding:48px 0 22px;display:grid;grid-template-columns:1.25fr .75fr;gap:28px;align-items:start}
-    h1{font-size:44px;line-height:1.05;margin:0 0 14px}
-    p{color:var(--muted);line-height:1.5;margin:0 0 14px}
-    .card{background:rgba(255,255,255,.04);border:1px solid var(--line);border-radius:16px;padding:18px}
-    .grid{display:grid;grid-template-columns:repeat(3,1fr);gap:14px;margin-top:18px}
+    .brand{display:flex;align-items:center;gap:10px;font-weight:800;letter-spacing:.2px}
+    .brand .dot{width:10px;height:10px;border-radius:999px;background:linear-gradient(135deg,var(--accent),var(--accent2)); box-shadow:0 0 22px rgba(61,231,255,.35)}
+    .nav a{text-decoration:none}
+
+    .pill{display:flex;gap:10px;align-items:center}
+
+    .btn{
+      display:inline-flex;align-items:center;justify-content:center;
+      gap:10px;
+      border-radius:14px;
+      padding:12px 16px;
+      font-weight:800;
+      text-decoration:none;
+      border:1px solid transparent;
+      cursor:pointer;
+      user-select:none;
+      transition:transform .12s ease, background .12s ease, border-color .12s ease, opacity .12s ease;
+    }
+    .btn.primary{
+      background:linear-gradient(135deg, rgba(255,122,61,1), rgba(255,122,61,.82));
+      color:#140A06;
+      box-shadow:0 14px 50px rgba(255,122,61,.18);
+    }
+    .btn.primary:hover{transform:translateY(-1px)}
+
+    .btn.ghost{
+      background:rgba(255,255,255,.03);
+      border-color:var(--line);
+      color:var(--text);
+    }
+    .btn.ghost:hover{border-color:rgba(255,255,255,.22);transform:translateY(-1px)}
+
+    .hero{
+      margin-top:22px;
+      display:grid;
+      grid-template-columns: 1.15fr .85fr;
+      gap:18px;
+      align-items:stretch;
+    }
+
+    .card{
+      background:linear-gradient(180deg, var(--panel), var(--panel2));
+      border:1px solid var(--line);
+      border-radius:18px;
+      padding:18px;
+      box-shadow:var(--shadow);
+      backdrop-filter: blur(10px);
+    }
+
+    .kicker{display:inline-flex;align-items:center;gap:10px;font-size:12px;letter-spacing:.16em;text-transform:uppercase;color:rgba(234,240,255,.86);font-weight:800}
+    .kicker .bar{width:16px;height:2px;background:linear-gradient(90deg,var(--accent),var(--accent2));border-radius:99px}
+
+    h1{font-size:48px;line-height:1.03;margin:10px 0 10px;letter-spacing:-.02em}
+    .lede{color:var(--muted);line-height:1.55;margin:0 0 12px;font-size:16px}
+
+    .ctaRow{display:flex;gap:10px;flex-wrap:wrap;margin-top:14px}
+    .subtle{color:rgba(184,196,230,.9);font-size:13px;margin-top:10px}
+
+    .badges{display:flex;gap:10px;flex-wrap:wrap;margin-top:14px}
+    .badge{display:inline-flex;align-items:center;gap:8px;padding:8px 10px;border-radius:999px;background:rgba(255,255,255,.03);border:1px solid var(--line);color:rgba(234,240,255,.9);font-weight:700;font-size:12px}
+    .badge .b{width:7px;height:7px;border-radius:999px;background:var(--ok); box-shadow:0 0 16px rgba(60,255,160,.35)}
+
+    .grid3{display:grid;grid-template-columns:repeat(3,1fr);gap:12px;margin-top:14px}
     .mini h3{margin:0 0 6px;font-size:14px;color:#fff}
-    .mini p{margin:0;font-size:13px}
-    .section{padding:28px 0}
-    .split{display:grid;grid-template-columns:1fr 1fr;gap:18px}
-    .kicker{font-weight:700;color:#fff;opacity:.9;font-size:13px;letter-spacing:.15em;text-transform:uppercase}
-    .foot{border-top:1px solid var(--line);padding:18px 0;color:var(--muted);font-size:13px}
-    @media(max-width:880px){.hero{grid-template-columns:1fr} h1{font-size:36px} .grid{grid-template-columns:1fr} .split{grid-template-columns:1fr}}
+    .mini p{margin:0;font-size:13px;color:var(--muted);line-height:1.45}
+
+    .section{margin-top:14px}
+    .section h2{margin:0 0 10px;font-size:20px;letter-spacing:-.01em}
+
+    .split{display:grid;grid-template-columns:1fr 1fr;gap:12px}
+
+    .timeline{display:flex;flex-direction:column;gap:10px;margin-top:10px}
+    .step{display:flex;gap:10px;align-items:flex-start}
+    .num{flex:0 0 auto;width:26px;height:26px;border-radius:10px;display:flex;align-items:center;justify-content:center;font-weight:900;background:rgba(61,231,255,.10);border:1px solid rgba(61,231,255,.26);color:rgba(234,240,255,.92)}
+    .step b{display:block;margin:0 0 2px}
+    .step span{display:block;color:var(--muted);font-size:13px;line-height:1.45}
+
+    .summary{
+      border-radius:16px;
+      padding:14px;
+      border:1px solid rgba(255,255,255,.14);
+      background:rgba(0,0,0,.22);
+      font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+      color:rgba(234,240,255,.92);
+      font-size:12.5px;
+      line-height:1.45;
+      overflow:auto;
+    }
+
+    .footer{margin-top:18px;border-top:1px solid var(--line);padding-top:16px;color:rgba(184,196,230,.92);font-size:13px;display:flex;justify-content:space-between;gap:12px;flex-wrap:wrap}
+    .footer a{opacity:.95}
+
+    @media(max-width:920px){
+      h1{font-size:40px}
+      .hero{grid-template-columns:1fr}
+      .grid3{grid-template-columns:1fr}
+      .split{grid-template-columns:1fr}
+    }
   </style>
 </head>
 <body>
   <div class="wrap">
     <div class="nav">
-      <div class="brand">Squidworks AI</div>
+      <div class="brand"><span class="dot"></span> Squidworks AI</div>
       <div class="pill">
-        <a href="/pricing.html">Pricing</a>
-        <a href="/intake.html" class="btn">Get a demo</a>
+        <a href="/pricing.html" class="btn ghost">Pricing</a>
+        <a href="/intake.html" class="btn primary">Get a demo</a>
       </div>
     </div>
 
     <div class="hero">
-      <div>
-        <div class="kicker">AI receptionist</div>
-        <h1>Stop missing calls. <br/>Capture every lead.</h1>
-        <p>Squidworks AI installs a voice agent that answers inbound calls, captures lead details, and sends actionable summaries—so your customers don’t wait and your business doesn’t leak money.</p>
-        <div style="display:flex;gap:10px;flex-wrap:wrap;margin-top:16px">
-          <a class="btn" href="/intake.html">Start the quick intake</a>
-          <a class="btn secondary" href="/pricing.html">See pricing</a>
+      <div class="card">
+        <div class="kicker"><span class="bar"></span> AI receptionist for inbound calls</div>
+        <h1>Every missed call is money.<br/>Let your agent pick up.</h1>
+        <p class="lede">We install a voice agent that answers inbound calls, captures the details that matter, and gives you an actionable summary—so you respond faster and stop leaking leads.</p>
+
+        <div class="ctaRow">
+          <a class="btn primary" href="/intake.html">Get a demo <span style="opacity:.75;font-weight:900">→</span></a>
+          <a class="btn ghost" href="/pricing.html">See pricing</a>
         </div>
-        <div class="grid">
-          <div class="card mini"><h3>Answers inbound calls</h3><p>No more “leave a message.”</p></div>
-          <div class="card mini"><h3>Captures the right info</h3><p>Name, need, urgency—cleanly.</p></div>
-          <div class="card mini"><h3>Actionable summaries</h3><p>So follow-up becomes automatic.</p></div>
+        <div class="subtle">2–3 minute intake. No spam. Built for small business reality.</div>
+
+        <div class="badges">
+          <div class="badge"><span class="b"></span> Store-first intake (no lost submissions)</div>
+          <div class="badge"><span class="b"></span> Texting + automation on Standard+</div>
+          <div class="badge"><span class="b"></span> Upgrade anytime</div>
+        </div>
+
+        <div class="grid3">
+          <div class="card mini" style="box-shadow:none">
+            <h3>Answers immediately</h3>
+            <p>No more voicemail roulette. The agent picks up and stays calm.</p>
+          </div>
+          <div class="card mini" style="box-shadow:none">
+            <h3>Captures clean info</h3>
+            <p>Name, business, intent, urgency—written into your CRM.</p>
+          </div>
+          <div class="card mini" style="box-shadow:none">
+            <h3>Turns into next steps</h3>
+            <p>Summaries you can act on, plus optional texting and routing.</p>
+          </div>
         </div>
       </div>
+
       <div class="card">
-        <div class="kicker">How it works</div>
-        <ol style="margin:12px 0 0;padding-left:18px;color:var(--muted);line-height:1.6">
-          <li>Prospect calls your agent</li>
-          <li>We send a quick intake link</li>
-          <li>Short interview (optional)</li>
-          <li>Demo call + tuning</li>
-          <li>Launch</li>
-        </ol>
-        <div style="margin-top:14px">
-          <a class="btn" href="/intake.html">Get a demo</a>
+        <div class="kicker"><span class="bar"></span> What you’ll see in the demo</div>
+        <div style="margin-top:10px" class="summary" aria-label="Example call summary">
+Caller: (843) 555-0137\n
+Name: Chris\nBusiness: Lowcountry HVAC\nIntent: Missed calls after-hours; wants leads captured + quick follow-up\nUrgency: This week\nNext step: Text intake link during call + notify owner\n\nNotes: Wants friendly tone; avoid quoting prices; route emergencies to on-call.
+        </div>
+
+        <div class="section" style="margin-top:14px">
+          <h2>How it works</h2>
+          <div class="timeline">
+            <div class="step"><div class="num">1</div><div><b>Call comes in</b><span>Your agent answers and captures the right fields.</span></div></div>
+            <div class="step"><div class="num">2</div><div><b>Quick intake</b><span>We send a short intake link (SMS on Standard+; email on Essentials).</span></div></div>
+            <div class="step"><div class="num">3</div><div><b>Demo + tune</b><span>Hear a test call. We tighten scripts and guardrails.</span></div></div>
+            <div class="step"><div class="num">4</div><div><b>Launch</b><span>Turn on the line and start catching what you used to miss.</span></div></div>
+          </div>
+        </div>
+
+        <div class="ctaRow" style="margin-top:14px">
+          <a class="btn primary" href="/intake.html">Start intake</a>
+          <a class="btn ghost" href="/pricing.html">Plans</a>
         </div>
       </div>
     </div>
 
     <div class="section split">
       <div class="card">
-        <div class="kicker">Who it’s for</div>
-        <p style="margin-top:10px">Local service businesses, clinics, contractors, and any team that loses leads because phones go unanswered.</p>
+        <div class="kicker"><span class="bar"></span> Who it’s for</div>
+        <p class="lede" style="margin-top:10px">Service businesses, clinics, contractors, and teams that lose leads because phones go unanswered—especially after-hours.</p>
       </div>
       <div class="card">
-        <div class="kicker">What you get</div>
-        <p style="margin-top:10px">A working inbound agent, lead capture, and a pipeline that turns calls into booked conversations.</p>
+        <div class="kicker"><span class="bar"></span> The promise</div>
+        <p class="lede" style="margin-top:10px">Fewer missed calls. Faster follow-up. Cleaner data. A calmer nervous system.</p>
       </div>
     </div>
 
-    <div class="foot">
-      © <span id="y"></span> Squidworks AI • <a href="/pricing.html">Pricing</a> • <a href="/intake.html">Intake</a>
+    <div class="footer">
+      <div>© <span id="y"></span> Squidworks AI</div>
+      <div style="display:flex;gap:12px;flex-wrap:wrap">
+        <a href="/pricing.html">Pricing</a>
+        <a href="/intake.html">Intake</a>
+      </div>
     </div>
   </div>
+
   <script>document.getElementById('y').textContent=new Date().getFullYear()</script>
 </body>
 </html>
