--- a/public/pricing.html
+++ b/public/pricing.html
@@ -4,81 +4,108 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Squidworks AI — Pricing</title>
+  <meta name="description" content="Transparent plans for your AI receptionist: Essentials, Standard, Pro." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
   <style>
-    :root{--bg:#0b1220;--panel:#0f1a33;--text:#eaf0ff;--muted:#b8c4e6;--accent:#ff7a3d;--line:rgba(255,255,255,.12)}
-    *{box-sizing:border-box} body{margin:0;font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial; background:linear-gradient(180deg,var(--bg),#070b15); color:var(--text)}
-    a{color:inherit} .wrap{max-width:1060px;margin:0 auto;padding:32px 20px}
+    :root{--bg0:#070A14;--bg1:#0B1220;--panel:rgba(255,255,255,.06);--panel2:rgba(255,255,255,.04);--text:#EAF0FF;--muted:#B8C4E6;--line:rgba(255,255,255,.12);--accent:#FF7A3D;--accent2:#3DE7FF;--shadow:0 18px 60px rgba(0,0,0,.45)}
+    *{box-sizing:border-box} body{margin:0;font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial;color:var(--text);
+      background:radial-gradient(1100px 600px at 20% 0%, rgba(61,231,255,.16), transparent 55%),
+               radial-gradient(900px 520px at 85% 10%, rgba(255,122,61,.16), transparent 55%),
+               linear-gradient(180deg,var(--bg1),var(--bg0));}
+    a{color:inherit}
+    .wrap{max-width:1120px;margin:0 auto;padding:26px 20px 34px}
     .nav{display:flex;align-items:center;justify-content:space-between;gap:16px}
-    .brand{font-weight:700}
-    .btn{background:var(--accent);color:#111;border:none;border-radius:12px;padding:12px 16px;font-weight:700;text-decoration:none;display:inline-block}
-    .btn.secondary{background:transparent;color:var(--text);border:1px solid var(--line)}
-    .card{background:rgba(255,255,255,.04);border:1px solid var(--line);border-radius:16px;padding:18px}
-    h1{margin:26px 0 12px;font-size:36px}
-    p{color:var(--muted);line-height:1.5}
-    .grid{display:grid;grid-template-columns:repeat(3,1fr);gap:14px;margin-top:16px}
-    .price{font-size:28px;font-weight:800;margin:6px 0}
+    .brand{display:flex;align-items:center;gap:10px;font-weight:800;text-decoration:none}
+    .dot{width:10px;height:10px;border-radius:999px;background:linear-gradient(135deg,var(--accent),var(--accent2)); box-shadow:0 0 22px rgba(61,231,255,.35)}
+    .btn{display:inline-flex;align-items:center;justify-content:center;gap:10px;border-radius:14px;padding:12px 16px;font-weight:800;text-decoration:none;border:1px solid transparent;transition:transform .12s ease, border-color .12s ease}
+    .btn.primary{background:linear-gradient(135deg, rgba(255,122,61,1), rgba(255,122,61,.82));color:#140A06}
+    .btn.ghost{background:rgba(255,255,255,.03);border-color:var(--line)}
+    .btn:hover{transform:translateY(-1px)}
+    .kicker{display:inline-flex;align-items:center;gap:10px;font-size:12px;letter-spacing:.16em;text-transform:uppercase;color:rgba(234,240,255,.86);font-weight:800}
+    .kicker .bar{width:16px;height:2px;background:linear-gradient(90deg,var(--accent),var(--accent2));border-radius:99px}
+    h1{margin:18px 0 8px;font-size:38px;letter-spacing:-.02em}
+    p{margin:0 0 12px;color:var(--muted);line-height:1.55}
+    .grid{display:grid;grid-template-columns:repeat(3,1fr);gap:12px;margin-top:14px}
+    .card{background:linear-gradient(180deg,var(--panel),var(--panel2));border:1px solid var(--line);border-radius:18px;padding:18px;box-shadow:var(--shadow);backdrop-filter: blur(10px)}
+    .tier{font-weight:900;letter-spacing:.01em}
+    .price{font-size:30px;font-weight:900;margin:8px 0 2px}
+    .sub{font-size:13px;color:rgba(184,196,230,.92);margin-bottom:10px}
     ul{margin:12px 0 0;padding-left:18px;color:var(--muted);line-height:1.6}
-    .note{margin-top:16px}
-    @media(max-width:880px){.grid{grid-template-columns:1fr} h1{font-size:30px}}
+    .emph{border-color:rgba(255,122,61,.65)}
+    .row{display:flex;gap:10px;flex-wrap:wrap;margin-top:14px}
+    .note{margin-top:12px}
+    .footer{margin-top:18px;border-top:1px solid var(--line);padding-top:16px;color:rgba(184,196,230,.92);font-size:13px;display:flex;justify-content:space-between;gap:12px;flex-wrap:wrap}
+    @media(max-width:920px){.grid{grid-template-columns:1fr} h1{font-size:32px}}
   </style>
 </head>
 <body>
   <div class="wrap">
     <div class="nav">
-      <div class="brand"><a href="/">Squidworks AI</a></div>
+      <a class="brand" href="/"><span class="dot"></span> Squidworks AI</a>
       <div style="display:flex;gap:10px;align-items:center">
-        <a class="btn secondary" href="/">Home</a>
-        <a class="btn" href="/intake.html">Get a demo</a>
+        <a class="btn ghost" href="/">Home</a>
+        <a class="btn primary" href="/intake.html">Get a demo</a>
       </div>
     </div>
 
-    <h1>Pricing</h1>
-    <p>All plans include an inbound voice agent + summaries. Upgrade as you expand into texting, automation, and deeper ops.</p>
+    <div style="margin-top:16px" class="kicker"><span class="bar"></span> Plans</div>
+    <h1>Pricing that lands and expands</h1>
+    <p>Start with email-only summaries, then upgrade into texting and automation when you’re ready. No lock-in—upgrade anytime.</p>
 
     <div class="grid">
       <div class="card">
-        <div style="font-weight:800">Essentials</div>
-        <div class="price">$75<span style="font-size:14px;font-weight:700;color:var(--muted)">/mo</span></div>
-        <p>Email-only summaries. Best for a clean voicemail replacement.</p>
+        <div class="tier">Essentials</div>
+        <div class="price">$75<span style="font-size:14px;font-weight:800;color:rgba(184,196,230,.92)">/mo</span></div>
+        <div class="sub">Email-only. Best voicemail replacement.</div>
         <ul>
-          <li>300 minutes included</li>
+          <li><b>300 minutes</b> included</li>
           <li>Email summaries (no SMS)</li>
           <li>Basic lead capture</li>
         </ul>
       </div>
-      <div class="card" style="border-color:rgba(255,122,61,.6)">
-        <div style="font-weight:800">Standard</div>
-        <div class="price">$150<span style="font-size:14px;font-weight:700;color:var(--muted)">/mo</span></div>
-        <p>Texting + light automation. Best for converting leads fast.</p>
+
+      <div class="card emph">
+        <div class="tier">Standard</div>
+        <div class="price">$150<span style="font-size:14px;font-weight:800;color:rgba(184,196,230,.92)">/mo</span></div>
+        <div class="sub">Texting + light automation. Best for conversion.</div>
         <ul>
-          <li>600 minutes included</li>
-          <li>SMS links + confirmations</li>
+          <li><b>600 minutes</b> included</li>
+          <li>SMS intake link + confirmations</li>
           <li>Light automation + routing</li>
         </ul>
       </div>
+
       <div class="card">
-        <div style="font-weight:800">Pro</div>
-        <div class="price">$400<span style="font-size:14px;font-weight:700;color:var(--muted)">/mo</span></div>
-        <p>Advanced automation + reporting. Best for a front office.</p>
+        <div class="tier">Pro</div>
+        <div class="price">$400<span style="font-size:14px;font-weight:800;color:rgba(184,196,230,.92)">/mo</span></div>
+        <div class="sub">Advanced automation + reporting.</div>
         <ul>
-          <li>2,000 minutes included</li>
-          <li>Advanced automation</li>
+          <li><b>2,000 minutes</b> included</li>
+          <li>Advanced workflows + routing</li>
           <li>Richer reporting</li>
         </ul>
       </div>
     </div>
 
     <div class="card note">
-      <div style="font-weight:800">Overage</div>
-      <p>$0.25/min over included minutes (all plans).</p>
-      <div style="display:flex;gap:10px;flex-wrap:wrap">
-        <a class="btn" href="/intake.html">Start the quick intake</a>
-        <a class="btn secondary" href="/">Back</a>
+      <div class="kicker"><span class="bar"></span> Overage</div>
+      <p style="margin-top:10px"><b>$0.25/min</b> over included minutes (all plans).</p>
+      <div class="row">
+        <a class="btn primary" href="/intake.html">Get a demo →</a>
+        <a class="btn ghost" href="/">Back</a>
+      </div>
+    </div>
+
+    <div class="footer">
+      <div>© <span id="y"></span> Squidworks AI</div>
+      <div style="display:flex;gap:12px;flex-wrap:wrap">
+        <a href="/intake.html">Intake</a>
+        <a href="/">Home</a>
       </div>
     </div>
   </div>
+  <script>document.getElementById('y').textContent=new Date().getFullYear()</script>
 </body>
 </html>
