Fix demo summary newlines + clarify demo vs deployment flow + dropdown contrast

--- a/public/index.html
+++ b/public/index.html
@@ -127,6 +127,7 @@
       font-size:12.5px;
       line-height:1.45;
       overflow:auto;
+      white-space:pre-wrap;
     }
 
     .footer{margin-top:18px;border-top:1px solid var(--line);padding-top:16px;color:rgba(184,196,230,.92);font-size:13px;display:flex;justify-content:space-between;gap:12px;flex-wrap:wrap}
@@ -186,18 +187,32 @@
 
       <div class="card">
         <div class="kicker"><span class="bar"></span> What you’ll see in the demo</div>
-        <div style="margin-top:10px" class="summary" aria-label="Example call summary">
-Caller: (843) 555-0137\n
-Name: Chris\nBusiness: Lowcountry HVAC\nIntent: Missed calls after-hours; wants leads captured + quick follow-up\nUrgency: This week\nNext step: Text intake link during call + notify owner\n\nNotes: Wants friendly tone; avoid quoting prices; route emergencies to on-call.
+        <div style="margin-top:10px" class="summary" aria-label="Example call summary">Caller: (843) 555-0137
+Name: Chris
+Business: Lowcountry HVAC
+Intent: Missed calls after-hours; wants leads captured + quick follow-up
+Urgency: This week
+Next step: Text intake link during call + notify owner
+
+Notes: Wants friendly tone; avoid quoting prices; route emergencies to on-call.</div>
+
+        <div class="section" style="margin-top:14px">
+          <h2>Demo process (what happens next)</h2>
+          <div class="timeline">
+            <div class="step"><div class="num">1</div><div><b>Submit intake</b><span>Start the quick intake so we can tailor the demo to your business.</span></div></div>
+            <div class="step"><div class="num">2</div><div><b>Demo prep call (10 min)</b><span>Our outbound agent calls to confirm call types, tone, and routing preferences.</span></div></div>
+            <div class="step"><div class="num">3</div><div><b>We build your demo agent</b><span>We rapidly stand up a demo based on your needs (hours, scripts, guardrails).</span></div></div>
+            <div class="step"><div class="num">4</div><div><b>Live demo</b><span>We schedule a live test call so you can hear it in action and request tweaks.</span></div></div>
+            <div class="step"><div class="num">5</div><div><b>Pay + deploy</b><span>If you want to move forward, we send a payment link and deploy quickly.</span></div></div>
+          </div>
         </div>
 
         <div class="section" style="margin-top:14px">
-          <h2>How it works</h2>
+          <h2>After deployment (your reality)</h2>
           <div class="timeline">
-            <div class="step"><div class="num">1</div><div><b>Call comes in</b><span>Your agent answers and captures the right fields.</span></div></div>
-            <div class="step"><div class="num">2</div><div><b>Quick intake</b><span>We send a short intake link (SMS on Standard+; email on Essentials).</span></div></div>
-            <div class="step"><div class="num">3</div><div><b>Demo + tune</b><span>Hear a test call. We tighten scripts and guardrails.</span></div></div>
-            <div class="step"><div class="num">4</div><div><b>Launch</b><span>Turn on the line and start catching what you used to miss.</span></div></div>
+            <div class="step"><div class="num">✓</div><div><b>Forward missed calls</b><span>Route calls that would hit voicemail to your agent instead.</span></div></div>
+            <div class="step"><div class="num">✓</div><div><b>24/7/365 coverage</b><span>The agent handles intake, captures leads, and summarizes outcomes.</span></div></div>
+            <div class="step"><div class="num">✓</div><div><b>Mature over time</b><span>We evolve the agent with knowledge, automation, and deeper routing as you grow.</span></div></div>
           </div>
         </div>
 
