Add SMS and Compliance language

--- a/public/index.html
+++ b/public/index.html
@@ -239,6 +239,8 @@ Notes: Wants friendly tone; avoid quoting prices; route emergencies to on-call.<
       <div style="display:flex;gap:12px;flex-wrap:wrap">
         <a href="/pricing.html">Pricing</a>
         <a href="/intake.html">Intake</a>
+        <a href="/privacy-policy.html">Privacy Policy</a>
+        <a href="/sms-terms.html">SMS Terms and Conditions</a>
       </div>
     </div>
   </div>
